8306568: [lworld] Oop verification failure in InlineKlass::returned_inline_klass